QuicHttpStream::ReadResponseBody() should return OK if a solo fin is read, not ERR_QUIC_PROTOCOL_ERROR.

BUG=748249

Change-Id: I08e68b5ddf366f0632c49a3ec993ce62e9c8b891
Reviewed-on: https://chromium-review.googlesource.com/583906
Reviewed-by: Zhongyi Shi <zhongyi@chromium.org>
Commit-Queue: Ryan Hamilton <rch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489209}
Former-commit-id: 2ef0a9c3ed9aa629c0bb7428d4dfed904bfbb2cb